Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-26499

galera_3nodes.galera_ipv6_mysqldump MTR failed: mysql_shutdown failed

    XMLWordPrintable

Details

    Description

      stdio.log

      10.6.5 7271cf48d62196abc0c578d00ab3ca09b56aae77

      galera_3nodes.galera_ipv6_mysqldump 'innodb' w1 [ fail ]
              Test ended at 2021-08-29 06:12:51
       
      CURRENT_TEST: galera_3nodes.galera_ipv6_mysqldump
      mysqltest: In included file "./include/shutdown_mysqld.inc": 
      included from ./include/restart_mysqld.inc at line 10:
      included from /usr/share/mysql/mysql-test/suite/galera_3nodes/t/galera_ipv6_mysqldump.test at line 85:
      At line 50: mysql_shutdown failed
      

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 3d Original Estimate - 3d
                  3d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 6d 2.5h
                  6d 2.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.